--- a/exercicios/ex025_projeto_cordel/index.html
+++ b/exercicios/ex025_projeto_cordel/index.html
@@ -15,7 +15,7 @@
     <header>
         <pre>
             <h1>Cordel Moderno</h1>
-            Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a>
+ <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a></p>
         </pre>
     </header>
 
