--- a/exercicios/ex026_tabelas/tabela001.html
+++ b/exercicios/ex026_tabelas/tabela001.html
@@ -4,8 +4,60 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabelas</title>
+
+    <style>
+        body{
+            font-family: Arial, Helvetica, sans-serif;
+            background-color: rgba(70, 40, 40, 0.705);
+        }
+        table{
+            border-collapse: collapse;
+        }
+        tr{
+            background-color: coral;
+        }
+        tr.linha{
+            background-color: darkcyan;
+        }
+        td{
+            text-align: center right bottom;
+            vertical-align: middle top bottom;
+
+            width: 100px;
+            height: 100px;
+            border: 1px solid black;
+            padding-left: 50px;
+        }
+        td#teste{
+            background-color: darkkhaki;
+        }
+    </style>    
 </head>
 <body>
-    
+
+
+    <h1>Minha primeira tabela</h1>
+    <table>
+        <tr class="linha">
+            <td>A1</td>
+            <td>B1</td>
+            <td>C1</td>
+        </tr>
+        <tr>
+            <td>A2</td>
+            <td>B2</td>
+            <td>C2</td>
+        </tr>
+        <tr>
+            <td>A3</td>
+            <td id="teste">B3</td>
+            <td>C3</td>
+        </tr>
+        <tr>
+            <td>A4</td>
+            <td>B4</td>
+            <td>C4</td>
+        </tr>
+    </table>
 </body>
 </html>
